Fix: Spelling errors on index and how to.

--- a/home/templates/home/how-to-use.html
+++ b/home/templates/home/how-to-use.html
@@ -26,7 +26,7 @@
             <h2 class="red">Michael</h2>
             <p>After my divorce I ended up living alone in an apartment closer to work. I had lost most of my friends
                 because of what had
-                happened. I reached out through building managment to the other residents living in my apartment block 
+                happened. I reached out through building management to the other residents living in my apartment block 
                 and asking for help. I couldn't tell you, at the
                 time, how surprised
                 I was by the kindness of strangers. I have made many new friends and have been working hard to become
@@ -60,9 +60,9 @@
                 my friends to say that I
                 desperately needed help from people I could trust and that could keep the addiction I needed help
                 fighting a secret.
-                I have recieved a huge ammount of support, I have friends who help look after my child in the evenings
+                I have receieved a huge amount of support, I have friends who help look after my child in the evenings
                 when I go to my AA meetings,
-                I have been given a weath of information to help regain control my finances and I am making changes to better
+                I have been given a wealth of information to help regain control my finances and I am making changes to better
                 the lives of me and my child.
             </p>
 
