--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -35,7 +35,7 @@
             <p>I was scared from all the old horror stories of kids being shunned or abandoned by their friends and
                 family
                 for their sexuality. I used Reach Out to tell my friends that 'someone they knew' was struggling to talk
-                about it. After recieving a number of encouraging messages it gave me the confidence to come out in
+                about it. After receieving a number of encouraging messages it gave me the confidence to come out in
                 person
                 and shortly after told my parents! I'm finally feeling more like the real me.
             </p>
@@ -164,7 +164,7 @@
                     </h2>
                     <p class="mb-0">We want you to know that all of your information here is kept private. It will be
                         up to you to reveal your identity, should you choose to, to the people you reach out to.
-                        We also understand not everyone will get the responce they are hoping for and if the supports
+                        We also understand not everyone will get the response they are hoping for and if the supports
                         that we have listed don't cover your needs, please reach out to us and we will try to help
                         guide you however we can.</p>
                 </div>
