Fix: Footer stuck to bottom

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,18 +1,17 @@
-<div>
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 pt-4 border-top bg-light">
-    <p class="col-xs mb-0 text-muted">©2022 Reach Out</p>
+<footer
+  class="d-flex flex-wrap justify-content-between align-items-center py-3 pt-4 border-top bg-light mt-auto">
+  <p class="col-xs mb-0 text-muted">©2022 Reach Out</p>
 
-    <div class="nav col-xs justify-content-end">
-      <ul class="nav list-unstyled ms-auto">
-        <li class="mx-2 mx-lg-3"><a class="link-secondary" href="https://twitter.com/" target="_blank"><i
-              class="fab fa-twitter text-dark h5"></i></a></li>
-        <li class="mx-2 mx-lg-3"><a class="link-secondary" href="https://facebook.com/" target="_blank"><i
-              class="fab fa-facebook text-dark h5"></i></a></li>
-        <li class="mx-2 mx-lg-3"><a class="link-secondary" href="https://github.com/nlenno1/team-5-may-2022"
-            target="_blank"><i class="fab fa-github text-dark h5"></i></a></li>
-        <li class="mx-2 mx-lg-3"><a class="link-secondary" href="mailto:reachout.connection.service@gmail.com"
-            target="_blank"><i class="fa-solid fa-envelope text-dark h5"></i></a></li>
-      </ul>
-    </div>
-  </footer>
-</div>
+  <div class="nav col-xs justify-content-end">
+    <ul class="nav list-unstyled ms-auto">
+      <li class="mx-2 mx-lg-3"><a class="link-secondary" href="https://twitter.com/" target="_blank"><i
+            class="fab fa-twitter text-dark h5"></i></a></li>
+      <li class="mx-2 mx-lg-3"><a class="link-secondary" href="https://facebook.com/" target="_blank"><i
+            class="fab fa-facebook text-dark h5"></i></a></li>
+      <li class="mx-2 mx-lg-3"><a class="link-secondary" href="https://github.com/nlenno1/team-5-may-2022"
+          target="_blank"><i class="fab fa-github text-dark h5"></i></a></li>
+      <li class="mx-2 mx-lg-3"><a class="link-secondary" href="mailto:reachout.connection.service@gmail.com"
+          target="_blank"><i class="fa-solid fa-envelope text-dark h5"></i></a></li>
+    </ul>
+  </div>
+</footer>
