Fix: Fix about us to be styled in line with index and how to.

--- a/home/templates/home/about-us.html
+++ b/home/templates/home/about-us.html
@@ -6,13 +6,13 @@
     <section id="about-hero" class="img-fluid">
         <div class="about-container">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <h1 class="display-4 text-shadow-primary">What is Reach Out?</h1>
-                    <p class=" about-lead h4">
+                <div class="index-hero-text-container">
+                    <h1 class="display-4">About Us</h1>
+                    <p class="h5 mt-4">
                         Reach Out aims to help anyone currently facing difficulties to take the first steps in reaching out to their
                         friends and family for support.
-                    </p>
-                    <p class="h4 blurb mt-4">
+                        <br>
+                        <br>
                         Designed with the hope of giving confidence to anyone who is struggling with approaching a friend
                         or a loved one to broach difficult topics of conversation, Reach Out is an App where users
                         can send a message to someone they know, inviting them to talk.
