--- a/home/templates/home/how-to-use.html
+++ b/home/templates/home/how-to-use.html
@@ -6,13 +6,12 @@
 <section id="how-to-hero" class="img-fluid">
     <div class="about-container">
         <div class="row">
-            <div class="index-hero-text-container">
+            <div class="how-to-hero-text-container">
                 <h1 class="display-4">How to Use Reach Out</h1>
-                <p>
+                <p class="h5 mt-4">
                     Below you'll find a guide that will lead you step by step on how to go about
                     preparing a
-                    message to the people you want to contact. The only thing you will need is their email address.
-                </p>
+                    message to the people you want to contact.<br><br> The only thing you will need is their email address.            </p>
             </div>
         </div>
     </div>
