--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,10 +10,10 @@
         <div class="row">
             <div class="index-hero-text-container">
                 <h1 class="display-4">Here To Help</h1>
-                <p>
+                <p class="h5 mt-4">
                     We all know support is likely out there for our struggles, but sometimes we need it most
                     from
-                    the people that matter to us and are too worried about the outcomes to ask for it. Here at Reach Out
+                    the people that matter to us and are too worried about the outcomes to ask for it. <br><br> Here at Reach Out
                     you can
                     use this platform to start those difficult conversations anonymously. Have a read of our users
                     testimonies to
