--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -14,8 +14,19 @@
                 <li class="nav-item active">
                     <a class="navlink" href="{% url 'home' %}">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="navlink" href="">Login</a>
+                <li class="nav-item dropdown">
+                    <a class="navlink dropdown-toggle" data-toggle="dropdown" href="#" id="accountDropdown"
+                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Account
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="accountDropdown">
+                        {% if request.user.is_authenticated %}
+                            <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a></li>
+                        {% else %}
+                            <li><a class="dropdown-item" href="{% url 'account_signup' %}">Register</a></li>
+                            <li><a class="dropdown-item" href="{% url 'account_login' %}">Sign In</a></li>
+                        {% endif %}
+                    </ul>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="navlink dropdown-toggle" data-toggle="dropdown" href="#" id="navbarDropdownMenuLink"
