--- a/static/css/base.css
+++ b/static/css/base.css
@@ -115,14 +115,31 @@ h5 {
     width: 12.5rem;
 }
 
+.navbar-text {
+    font-weight: 300;
+}
+
+.navbar-list-holder {
+    align-items: end;
+}
+
 .navlink {
     font-family: 'Nunito', san-serif;
     font-size: 1.25rem;
     font-weight: 300;
     color: var(--primary-color);
-    margin-left: 0.75rem;
-    margin-right: 0.75rem;
+    margin-left: 0.25rem;
+    margin-right: 0.25rem;
     text-decoration: none;
+}
+
+.nav-border {
+    border: solid 2px;
+    border-radius: 10px;
+    margin-right: 5px;
+    margin-top: 5px;
+    text-align: end;
+    max-width: 8rem;
 }
 
 .navlink:hover {
