Fix: Update login link for navbar. Error: uncertain of correct syntax, needs approval for specified fix.

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -15,7 +15,7 @@
                     <a class="navlink" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item nav-border dark-blue-bg">
-                    <a class="navlink" href="">Login</a>
+                    <a class="navlink" href="{% url 'account_login' %}">Login</a>
                 </li>
                 <li class="nav-item dropdown nav-border green-bg">
                     <a class="navlink dropdown-toggle" data-toggle="dropdown" href="#" id="navbarDropdownMenuLink"
