Enhancement: resolves #88 final edits to style allauth/account pages

--- a/connectionrequest/templates/connectionrequest/respond-to-connection-request.html
+++ b/connectionrequest/templates/connectionrequest/respond-to-connection-request.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-    <section>
-        <h1 class="text-success text-shadow-primary">Respond to Connection Request {{ data.request_id }}</h1>
+    <section class="container-fluid page-margin">
+        <h1 class="text-shadow-primary">Respond to Connection Request {{ data.request_id }}</h1>
         <h2 class="text-center text-md-start ps-md-5 mb-5">Fill in the form below to respond to your Connection Request</h2>
         <div class="row">
             <div class="col-12 col-md-6 offset-md-3">
