--- a/connectionrequest/templates/connectionrequest/search-for-request.html
+++ b/connectionrequest/templates/connectionrequest/search-for-request.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-    <section class="page-margin">
-        <h1 class="text-success text-center ml-4 mt-2 text-shadow-primary">Search for a Connection Request</h1>
+    <section class="container-fluid page-margin">
+        <h1 class="text-center ml-4 mt-2 text-shadow-primary">Search for a Connection Request</h1>
         <h2 class="text-center text-md-start ps-md-5 mb-5 mt-3">Enter you connection code to find your Connection Request</h2>
             <div class="row">
                 <div class="col-12 col-md-6 offset-md-3">
