--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -8,14 +8,16 @@
 {% endblock %}
 
 {% block content %}
-  <div id="allauth-content" class="container container-header">
-    <div class="row">
-      <div class="col-12 col-md-6 offset-md-3 text-center text-md-start">
-        <div class="allauth-form-inner-content my-5">
-          {% block inner_content %}
-          {% endblock %}
+  <section class="container-fluid">
+    <div id="allauth-content" class="container container-header">
+      <div class="row">
+        <div class="col-12 col-md-6 offset-md-3 text-center text-md-start">
+          <div class="allauth-form-inner-content my-5">
+            {% block inner_content %}
+            {% endblock %}
+          </div>
         </div>
       </div>
     </div>
-  </div>
+</section>
 {% endblock %}
