--- a/connectionrequest/templates/connectionrequest/send-request.html
+++ b/connectionrequest/templates/connectionrequest/send-request.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-    <section>
-        <h1 class="text-success text-shadow-primary">Connection Request</h1>
+    <section class="container-fluid page-margin">
+        <h1 class="text-shadow-primary">Connection Request</h1>
         <h2 class="text-center text-md-start ps-md-5 mb-5">Fill out the form below to send a Connection Request</h2>
             <div class="row">
                 <div class="col-12 col-md-6 offset-md-3">
