--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
 {% block inner_content %}
-<h1 class="mb-4">{% trans "Account Inactive" %}</h1>
+<h1 class="mb-4 text-shadow-primary">{% trans "Account Inactive" %}</h1>
 
 <p>{% trans "This account is inactive." %}</p>
 {% endblock %}
