--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Account" %}{% endblock %}
 
 {% block inner_content %}
-    <h1 class="mb-4">{% trans "E-mail Addresses" %}</h1>
+    <h1 class="mb-4 text-shadow-primary">{% trans "E-mail Addresses" %}</h1>
 {% if user.emailaddress_set.all %}
 <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
 
