--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -7,7 +7,7 @@
 
 
 {% block inner_content %}
-<h1 class="mb-4">{% trans "Confirm E-mail Address" %}</h1>
+<h1 class="mb-4 text-shadow-primary">{% trans "Confirm E-mail Address" %}</h1>
 
 {% if confirmation %}
 
