--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
 
-<h1 class="mb-4 text-shadow">{% trans "Sign In" %}</h1>
+<h1 class="mb-4 text-shadow-primary">{% trans "Sign In" %}</h1>
 
 {% get_providers as socialaccount_providers %}
 
