--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block inner_content %}
-<h1 class="mb-4">{% trans "Sign Out" %}</h1>
+<h1 class="mb-4 text-shadow-primary">{% trans "Sign Out" %}</h1>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
