--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h1 class="mb-4">{% trans "Change Password" %}</h1>
+    <h1 class="mb-4 text-shadow-primary">{% trans "Change Password" %}</h1>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
