--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -6,11 +6,11 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block inner_content %}
-    <h1 class="mb-4">{% trans "Password Reset" %}</h1>
-    
+    <h1 class="mb-4 text-shadow-primary">{% trans "Password Reset" %}</h1>
+
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    
+
     <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
 {% endblock %}
