--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -4,6 +4,6 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h1 class="mb-4">{% trans "Change Password" %}</h1>
+    <h1 class="mb-4 text-shadow-primary">{% trans "Change Password" %}</h1>
     <p>{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
