--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h1 class="mb-4">{% trans "Set Password" %}</h1>
+    <h1 class="mb-4 text-shadow-primary">{% trans "Set Password" %}</h1>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
