--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
 {% block inner_content %}
-<h1 class="mb-4">{% trans "Sign Up Closed" %}</h1>
+<h1 class="mb-4 text-shadow-primary">{% trans "Sign Up Closed" %}</h1>
 
 <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
 {% endblock %}
