Fix: Add aria labels for images. Re-order how to page. Fix link in index. Change nav bar text when hovered over.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -73,7 +73,7 @@
                 <p>The longer you take to open up, the longer you spend not living your best life. There's no reason
                     to take on these challenges alone. There are people out there willing to help you.
                 </p>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button">SignUp Now »</a></p>
+                <p><a class="btn btn-primary btn-lg" href="{% url 'account_signup' %}" role="button">SignUp Now »</a></p>
             </div>
         </div>
     </div>
