--- a/home/templates/home/how-to-use.html
+++ b/home/templates/home/how-to-use.html
@@ -7,69 +7,18 @@
     <div class="about-container">
         <div class="row">
             <div class="how-to-hero-text-container">
-                <h1 class="display-4">How to Use Reach Out</h1>
+                <h2 class="display-4">How to Use Reach Out</h1>
                 <p class="h5 mt-4">
                     Below you'll find a guide that will lead you step by step on how to go about
                     preparing a
-                    message to the people you want to contact.<br><br> The only thing you will need is their email address.            </p>
+                    message to the people you want to contact.<br><br> The only thing you will need is their email address.<br><br>
+                    Further down still you will find a list of supports available to you if you're unable to get the help you need.</p>
             </div>
         </div>
     </div>
 </section>
 
-<div class="container marketing testimonies-container">
-    <div class="row">
-        <div class="col-lg-4">
-            <img class="rounded-circle" src="{{ MEDIA_URL }}user5.png" alt="Generic placeholder image" width="140"
-                height="140">
-            <h2 class="red">Michael</h2>
-            <p>After my divorce I ended up living alone in an apartment closer to work. I had lost most of my friends
-                because of what had
-                happened. I reached out through building management to the other residents living in my apartment block 
-                and asking for help. I couldn't tell you, at the
-                time, how surprised
-                I was by the kindness of strangers. I have made many new friends and have been working hard to become
-                better than the man I was
-                before.
-            </p>
-
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4 right-push">
-            <img class="rounded-circle" src="{{ MEDIA_URL }}user4.png" alt="Generic placeholder image" width="140"
-                height="140">
-            <h2 class="green">Zack</h2>
-            <p>Whilst away at university I told my parents that someone close to them (I) was planning on transitioning.
-                My father didn't
-                respond and my mother was very dismissive and against the idea of someone she knew making such changes. But, with the support services I found
-                through this site I have found the words
-                and strength to speak about my feelings more confidently. Despite not getting the response I had hoped
-                for it has pushed me in the
-                right direction to start making the changes I need. I am much happier with who I am and have since come
-                out about it to my parents before trying to go for surgery.
-                With the conversations we had online, I think it has given them enough time to reflect on their thoughts of what they might have
-                sensed was coming.
-            </p>
-
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-            <img class="rounded-circle kate" src="{{ MEDIA_URL }}user6.png" alt="Generic placeholder image" width="140"
-                height="140">
-            <h2 class="light-blue">Maria</h2>
-            <p>As a single mother I had struggled with alcohol abuse for a while. I used this platform to reach out to
-                my friends to say that I
-                desperately needed help from people I could trust and that could keep the addiction I needed help
-                fighting a secret.
-                I have receieved a huge amount of support, I have friends who help look after my child in the evenings
-                when I go to my AA meetings,
-                I have been given a wealth of information to help regain control my finances and I am making changes to better
-                the lives of me and my child.
-            </p>
-
-        </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
-</div>
-
-<div class="album py-5 bg-light">
+<div class="album py-5">
     <div class="container">
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -149,7 +98,7 @@
                     <div class="card-body">
                         <p class="card-text">If you're unable to get the response or help that you were hoping for,
                             don't be
-                            disheartened. There are plenty of professional services out there who want to help you with
+                            disheartened. Keep reading, a little further down are plenty of professional services out there who want to help you with
                             your
                             struggles and we're proud of you for taking this difficult step.
                         </p>
@@ -158,6 +107,58 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="container marketing testimonies-container bg-light">
+    <div class="row">
+        <div class="col-lg-4">
+            <img class="rounded-circle" src="{{ MEDIA_URL }}user5.png" alt="Generic placeholder image" width="140"
+                height="140">
+            <h2 class="red">Michael</h2>
+            <p>After my divorce I ended up living alone in an apartment closer to work. I had lost most of my friends
+                because of what had
+                happened. I reached out through building management to the other residents living in my apartment block 
+                and asking for help. I couldn't tell you, at the
+                time, how surprised
+                I was by the kindness of strangers. I have made many new friends and have been working hard to become
+                better than the man I was
+                before.
+            </p>
+
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4 right-push">
+            <img class="rounded-circle" src="{{ MEDIA_URL }}user4.png" alt="Generic placeholder image" width="140"
+                height="140">
+            <h2 class="green">Zack</h2>
+            <p>Whilst away at university I told my parents that someone close to them (I) was planning on transitioning.
+                My father didn't
+                respond and my mother was very dismissive and against the idea of someone she knew making such changes. But, with the support services I found
+                through this site I have found the words
+                and strength to speak about my feelings more confidently. Despite not getting the response I had hoped
+                for it has pushed me in the
+                right direction to start making the changes I need. I am much happier with who I am and have since come
+                out about it to my parents before trying to go for surgery.
+                With the conversations we had online, I think it has given them enough time to reflect on their thoughts of what they might have
+                sensed was coming.
+            </p>
+
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+            <img class="rounded-circle kate" src="{{ MEDIA_URL }}user6.png" alt="Generic placeholder image" width="140"
+                height="140">
+            <h2 class="light-blue">Maria</h2>
+            <p>As a single mother I had struggled with alcohol abuse for a while. I used this platform to reach out to
+                my friends to say that I
+                desperately needed help from people I could trust and that could keep the addiction I needed help
+                fighting a secret.
+                I have receieved a huge amount of support, I have friends who help look after my child in the evenings
+                when I go to my AA meetings,
+                I have been given a wealth of information to help regain control my finances and I am making changes to better
+                the lives of me and my child.
+            </p>
+
+        </div><!-- /.col-lg-4 -->
+    </div><!-- /.row -->
 </div>
 
 <div class="container marketing help-container">
@@ -174,7 +175,7 @@
         <div class="col-lg-3">
             <div class="media"></div>
             <div class="media"><a href="https://www.mind.org.uk/information-support/helping-someone-else/"
-                    target="_blank"><img alt="A picture of two people under a tree." class="img-fluid media-image"
+                    target="_blank" aria-label="link to advice on helping other people"><img alt="A picture of two people under a tree." class="img-fluid media-image"
                         src="https://www.mind.org.uk/media/8747/two-people-in-a-meadow.jpg?format=webp&quality=70" />
                     <div class="media-body row no-gutters align-items-center support-link-text-holder">
                         <h2>Helping Someone Else</h2>
@@ -185,7 +186,7 @@
         <div class="col-lg-3">
             <div class="media"></div>
             <div class="media"><a href="https://www.mind.org.uk/information-support/tips-for-everyday-living/"
-                    target="_blank"><img alt="" class="img-fluid media-image" src="{{ MEDIA_URL }}tips.png" />
+                    target="_blank" aria-label="link to tips to help with finances and everyday living"><img alt="A man standing in the streets of a city" class="img-fluid media-image" src="{{ MEDIA_URL }}tips.png" />
                     <div class="media-body row no-gutters align-items-center support-link-text-holder">
                         <h2>Tips for Everyday Living</h2>
                     </div>
@@ -195,7 +196,7 @@
         <div class="col-lg-3">
             <div class="media"></div>
             <div class="media"><a href="https://www.mind.org.uk/information-support/drugs-and-treatments/"
-                    target="_blank"><img alt="" class="img-fluid media-image"
+                    target="_blank" aria-label="link to help finding medication"><img alt="Two woman chatting in an office" class="img-fluid media-image"
                         src="https://www.mind.org.uk/media/8740/two-people-talking-sofa.jpg?format=webp&quality=70" />
                     <div class="media-body row no-gutters align-items-center support-link-text-holder">
                         <h2>Therapies and Medication</h2>
@@ -205,8 +206,8 @@
         </div>
         <div class="col-lg-3">
             <div class="media"></div>
-            <div class="media"><a href="https://www.mind.org.uk/information-support/legal-rights/" target="_blank"><img
-                        alt="" class="img-fluid media-image"
+            <div class="media"><a href="https://www.mind.org.uk/information-support/legal-rights/" aria-label="link to support detailing your legal rights" target="_blank"><img
+                        alt="A picture of a pen and notebook" class="img-fluid media-image"
                         src="https://www.mind.org.uk/media/8873/pencil-on-a-notebook.jpg?format=webp&quality=70" />
                     <div class="media-body row no-gutters align-items-center support-link-text-holder">
                         <h2>Your Legal Rights</h2>
@@ -217,7 +218,7 @@
         <div class="col-lg-3">
             <div class="media"></div>
             <div class="media"><a href="https://www.mind.org.uk/information-support/for-children-and-young-people/"
-                    target="_blank"><img alt="" class="img-fluid media-image"
+                    target="_blank" aria-label="link to help for young people who are struggling"><img alt="A young girl listening to music" class="img-fluid media-image"
                         src="https://www.mind.org.uk/media/8678/person-wearing-headphones-grey-background.jpg?format=webp&quality=70" />
                     <div class="media-body row no-gutters align-items-center support-link-text-holder">
                         <h2>Information for Young People</h2>
@@ -227,8 +228,8 @@
         </div>
         <div class="col-lg-3">
             <div class="media"></div>
-            <div class="media"><a href="https://www.mind.org.uk/information-support/helplines/" target="_blank"><img
-                        alt="" class="img-fluid media-image" src="{{ MEDIA_URL }}helpline.png" />
+            <div class="media"><a href="https://www.mind.org.uk/information-support/helplines/" target="_blank" aria-label="link to various helplines"><img
+                        alt="People working at a call center" class="img-fluid media-image" src="{{ MEDIA_URL }}helpline.png" />
                     <div class="media-body row no-gutters align-items-center support-link-text-holder">
                         <h2>Helplines</h2>
                     </div>
@@ -239,7 +240,7 @@
             <div class="media"></div>
             <div class="media"><a
                     href="https://www.mind.org.uk/information-support/drugs-and-treatments/talking-therapy-and-counselling/how-to-find-a-therapist/"
-                    target="_blank"><img alt="" class="img-fluid media-image" src="{{ MEDIA_URL }}therapy.png" />
+                    target="_blank" aria-label="link to help find a therapist"><img alt="A therapist and patient" class="img-fluid media-image" src="{{ MEDIA_URL }}therapy.png" />
                     <div class="media-body row no-gutters align-items-center support-link-text-holder">
                         <h2>How to Find a Therapist</h2>
                     </div>
@@ -248,7 +249,7 @@
         </div>
         <div class="col-lg-3">
             <div class="media"></div>
-            <div class="media"><a href="https://www.mind.org.uk/need-urgent-help/" target="_blank"><img alt=""
+            <div class="media"><a href="https://www.mind.org.uk/need-urgent-help/" aria-label="link to crisis help" target="_blank"><img alt="A woman who is visibly distressed"
                         class="img-fluid media-image" src="{{ MEDIA_URL }}crisis.png" />
                     <div class="media-body row no-gutters align-items-center support-link-text-holder">
                         <h2>Dealing with Crisis</h2>
