Enhancement: resolves #52, 404 page; added app description to metatag, added webp convert to docs and css text shadow credit

--- a/templates/404.html
+++ b/templates/404.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-    <section id="page-not-found" class="img-fluid">
+    <section id="page-not-found" class="img-fluid page-margin container-fluid">
         <div class="page404-container">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
