--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,9 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="">
+      <meta name="description" content="Reach Out - an App to help anyone currently facing difficulties
+        to take the first steps in reaching out to their friends and family for support.">
+      <meta name="author" content="Reach Out Team">
       <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     {% endblock %}
 
