--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,6 +7,7 @@
     --fw-m: 600;
     --fw-b: 800;
 
+    /* text shadow credit to https://designshack.net/articles/css/12-fun-css-text-shadows-you-can-copy-and-paste/ */
     --text-primary: #1083a3;
     --text-secondary: #363946;
     --text-shadow: 2px 8px 6px rgba(0, 0, 0, 0.2),
